[package]
name = "lib-pam-isolate"
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
fs4 = "0.13.1"
log = { version = "0.4.17", features = ["serde"] }
rtnetlink = "0.17.0"
netlink-proto = "0.11.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.1" }
nix = { version = "0.30.1", default-features = false, features = [
    "mount",
    "user",
    "sched",
    "fs",
] }
toml = "0.8.22"
sysctl = "0.6.0"
futures = "0.3.31"
