[package]
name = "pam_isolate"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_isolate"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
log = { version = "0.4.17", features = ["serde"] }
toml = "0.7.3"
systemd-journal-logger = "0.7.0"
pam-bindings = "0.1.1"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt"] }
etc-passwd = "0.2.0"
uberspace-ns = { path = "../uberspace-ns" }
