[package]
name = "pam_isolate"
version = "0.3.0"
edition = "2024"

[lib]
name = "pam_isolate"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27", features = ["serde"] }
systemd-journal-logger = "2.2.2"
pam-bindings = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt"] }
lib-pam-isolate = { path = "../lib-pam-isolate" }
nix = { version = "0.30.1", default-features = false, features = ["user"] }
