[package]
name = "uberspace-ns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
fs4 = "0.6.3"
log = { version = "0.4.17", features = ["serde"] }
rtnetlink = "0.12.0"
netlink-packet-route = "0.15.0"
serde = { version = "1.0.159", features = ["serde_derive"] }
tokio = { version = "1.26.0" }
nix = { version = "0.26.2", default-features = false, features = ["mount", "user", "sched"] }
toml = "0.7.3"
