[package]
name = "wrapns"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = { version = "0.4.27", features = ["serde"] }
tokio = { version = "1.45.1", features = ["rt"] }
systemd-journal-logger = "2.2.2"
serde = { version = "1.0.219", features = ["derive"] }
lib-pam-isolate = { path = "../lib-pam-isolate" }
nix = { version = "0.30.1", default-features = false, features = ["user", "process"] }
